# optimus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  __main__.py  corpus.py  harness.py  report.py
deploy/postgres/: 10-init-rls-roles.sh
docs/: architecture.md  detection-eval.md  performance-notes.md  security-audit.md
docs/eval/: detection-eval-report.json  detection-eval-report.md
migrations/versions/: 0002_rls_multitenant.py  0003_global_submitters.py  0006_outbox.py  0007_rls_nullif_policy.py
monitoring/: nats.conf
scripts/: chaos_load.py  docker-entrypoint.sh
src/optimus/app/: simple.py
src/optimus/bus/: nats.py
src/optimus/contracts/: events.py
src/optimus/core/: circuit.py  config.py  guild_config.py  health.py  idempotency.py  lifecycle.py  readiness.py
src/optimus/db/: engine.py  models.py  repositories.py
src/optimus/globaldb/: __init__.py  promotion.py  service.py  signing.py
src/optimus/ingest/: __init__.py  fetcher.py  ssrf.py
src/optimus/services/detection/: index.py  relay.py  service.py  swarm.py
src/optimus/services/gateway/: bot.py
src/optimus/services/ingest/: __init__.py  __main__.py  service.py  worker.py
src/optimus/services/interactions/: service.py
src/optimus/services/moderation/: actions.py  service.py
tests/integration/: _harness.py  test_fetcher.py  test_index_manager.py  test_pipeline.py  test_rls_isolation.py  test_scheduler.py
tests/unit/: test_bus.py  test_commands.py  test_config_and_health.py  test_core.py  test_detection.py  test_detection_outbox.py  test_embedding.py  test_engine_pool.py  test_eval_harness.py  test_evidence.py  test_gateway.py  test_gateway_guild_joined.py  test_globaldb_promotion.py  test_globaldb_service.py  test_globaldb_signing.py  test_guild_config.py  test_lifecycle.py  test_moderation_actions.py  test_moderation_service.py  test_properties.py  test_readiness.py  test_repositories.py  test_review.py  test_swarm.py
(+2 files in other folders)
