[project]
name = "optimus"
version = "0.1.0"
description = "Discord moderation bot for detecting and removing scam/phishing images in near-real-time."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "optimus contributors" }]
dependencies = [
    "hikari>=2.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "redis>=8.0.1",
    "nats-py>=2.15.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "numpy>=2.5.1",
    "PyWavelets>=1.9.0",
    "structlog>=26.1.0",
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pynacl>=1.6.2",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
]

[project.scripts]
optimus = "optimus.__main__:main"

[project.optional-dependencies]
embedding = ["onnxruntime>=1.27.0"]
evidence = ["aioboto3>=15.5.0"]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.156.4",
    "fakeredis>=2.36.2",
    "ruff>=0.15.20",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/optimus", "benchmarks"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pywt.*", "onnxruntime.*", "nats", "nats.*", "PIL.*", "aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/optimus"]
branch = true
